<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Annie Hui @ RStar Technology Solutions
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableExponential_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    >

    <TableRow
        android:id="@+id/table_tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        >
        <TextView
            android:id="@+id/table_cell_0_0"
            android:text="@string/label_a0equals"
            android:textColor="@color/text_light"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
        <TextView
            android:id="@+id/table_cell_0_1"
            android:text="@string/label_blank"
            android:layout_gravity="right"
            android:gravity="right"
            android:textColor="@color/text_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
    </TableRow>

    <TableRow
        android:id="@+id/table_tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        >
        <TextView
            android:id="@+id/table_cell_1_0"
            android:text="@string/label_a1equals"
            android:textColor="@color/text_light"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
        <TextView
            android:id="@+id/table_cell_1_1"
            android:text="@string/label_blank"
            android:layout_gravity="right"
            android:gravity="right"
            android:textColor="@color/text_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
    </TableRow>

    <TableRow
        android:id="@+id/table_tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        >
        <TextView
            android:id="@+id/table_cell_2_0"
            android:text="@string/label_a2equals"
            android:textColor="@color/text_light"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
        <TextView
            android:id="@+id/table_cell_2_1"
            android:text="@string/label_blank"
            android:layout_gravity="right"
            android:gravity="right"
            android:textColor="@color/text_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
    </TableRow>

    <TableRow
        android:id="@+id/table_tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        >
        <TextView
            android:id="@+id/table_cell_3_0"
            android:text="@string/label_Tequals"
            android:textColor="@color/text_light"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
        <TextView
            android:id="@+id/table_cell_3_1"
            android:text="@string/label_blank"
            android:layout_gravity="right"
            android:gravity="right"
            android:textColor="@color/text_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingBottom="6dp"
            />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="@color/text_light" />

    <TableRow
        android:id="@+id/table_tableRowAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        >
        <TextView
            android:id="@+id/table_cell_result_0"
            android:text="@string/label_expEquals"
            android:textColor="@color/text_light"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            />
        <TextView
            android:id="@+id/table_cell_result_1"
            android:text="@string/label_blank"
            android:layout_gravity="right"
            android:gravity="right"
            android:textColor="@color/text_light"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/textsize_normal"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            />

    </TableRow>

</TableLayout>