<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Annie Hui @ RStar Technology Solutions
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentGraph_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/text_light"
            android:textSize="@dimen/textsize_normal"
            android:text="@string/label_thermocouple"
            />
        <Spinner
            android:id="@+id/fragmentGraph_thermocoupleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </Spinner>
    </LinearLayout>

    <com.rstar.mobile.thermocouple.ui.Graph
        android:id="@+id/fragmentGraph_graph"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:id="@+id/fragmentGraph_buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/fragmentGraph_buttonFn"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/keypad_button"
            android:textColor="@color/text_light"
            android:text="@string/label_showFn"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/fragmentGraph_buttonFnInv"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/keypad_button"
            android:textColor="@color/text_light"
            android:text="@string/label_showFnInv"
            android:textAllCaps="false"
            />
    </LinearLayout>

</LinearLayout>

