<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Annie Hui @ RStar Technology Solutions
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentFormula_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/text_light"
            android:textSize="@dimen/textsize_normal"
            android:text="@string/label_thermocouple"
            />
        <Spinner
            android:id="@+id/fragmentFormula_thermocoupleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </Spinner>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/fragmentFormula_Fn"
            android:layout_margin="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Fn"
            android:textAllCaps="false"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_light"
            android:background="@drawable/keypad_button"
            />
        <Button
            android:id="@+id/fragmentFormula_FnInv"
            android:layout_margin="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_FnInv"
            android:textAllCaps="false"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_light"
            android:background="@drawable/keypad_button"
            />

        <TextView
            android:id="@+id/fragmentFormula_inputType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="2dp"
            android:textColor="@color/text_light"
            android:textSize="@dimen/textsize_normal"
            android:text="@string/label_blank"
            />
        <EditText
            android:id="@+id/fragmentFormula_x"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/data_active"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="8"
            android:textColor="@color/text_dark"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/fragmentFormula_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:textColor="@color/text_light"
        android:textSize="@dimen/textsize_normal"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:background="@drawable/board"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragmentFormula_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="18dp"
                android:textColor="@color/text_light"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/fragmentFormula_polynomialLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="18dp"
                android:textColor="@color/text_light"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                />
            <LinearLayout
                android:id="@+id/fragmentFormula_polynomial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:orientation="vertical"
                >
            </LinearLayout>

            <TextView
                android:id="@+id/fragmentFormula_exponentialLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="18dp"
                android:textColor="@color/text_light"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                />

            <LinearLayout
                android:id="@+id/fragmentFormula_exponential"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:orientation="vertical"
                >
            </LinearLayout>

            <TextView
                android:id="@+id/fragmentFormula_exponentialConclude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="18dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColor="@color/text_light"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/fragmentFormula_errorRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="18dp"
                android:textColor="@color/text_light"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/fragmentFormula_footnote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:textColor="@color/text_medium"
        android:textSize="@dimen/textsize_small"
        />

</LinearLayout>